WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19717
REGRESSION (
r31872
-
r31878
): menu items render horizontally at the Economist
https://bugs.webkit.org/show_bug.cgi?id=19717
Summary
REGRESSION (r31872-r31878): menu items render horizontally at the Economist
Matt Lilek
Reported
2008-06-22 18:09:37 PDT
Load <
http://www.economist.com/
> and hover over the left column, the menus that appear will be completely horizontal instead of stacked vertically. Regression from Safari 3.1.1.
Attachments
First attempt at a reduction
(8.73 KB, text/html)
2008-07-02 00:39 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Reduction
(623 bytes, text/html)
2008-07-02 02:01 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-06-22 18:28:21 PDT
<
rdar://problem/6026832
>
Cameron Zwarich (cpst)
Comment 2
2008-07-02 00:39:43 PDT
Created
attachment 22040
[details]
First attempt at a reduction This isn't really a reduction yet, but it removes the extraneous content and most of the scripting. I'll work on the CSS next.
Cameron Zwarich (cpst)
Comment 3
2008-07-02 02:01:30 PDT
Created
attachment 22041
[details]
Reduction Here's a reduction. If I change the class of the <li> in the source itself instead of via an event handler, it works fine.
mitz
Comment 4
2008-07-28 15:45:46 PDT
bisect-builds says: Works:
r31872
Fails:
r31878
Making <
http://trac.webkit.org/changeset/31876
> the prime suspect.
mitz
Comment 5
2008-09-04 00:27:24 PDT
Fixed in <
http://trac.webkit.org/changeset/36082
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug